# serial-port

./: CMakeLists.txt  README.md  Version.txt
examples/2_with_timeout/: main.cpp
examples/4_callback/: main.cpp
examples/6_stream/: main.cpp
include/: AsyncSerial.h  SimpleSerial.h
src/: AsyncSerial.cpp  SerialStream.cpp  SimpleSerial.cpp  TimeoutSerial.cpp
